tests/snapshots/snapshots/snapshots__snapshots__error_messages__error_dependency_cycle.snap
---
source: tests/snapshots/error_messages.rs
assertion_line: 59
expression: normalize_output(&output.stderr)
---
Error: Cycle detected in dependencies: ID-REDACTED -> ID-REDACTED
Hint: Remove one dependency to break the cycle
