tests/snapshots/snapshots/snapshots__snapshots__error_messages__error_invalid_priority.snap
---
source: tests/snapshots/error_messages.rs
assertion_line: 30
expression: normalize_output(&output.stderr)
---
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Validating sync path path=/TMP/.beads/issues.jsonl beads_dir=/TMP/.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Path validated for sync I/O path=/TMP/.beads/issues.jsonl
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync: Import path validated input_path=/TMP/.beads/issues.jsonl beads_dir=/TMP/.beads allow_external=false
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::storage::sqlite: Rebuilt blocked issues cache blocked_count=0
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync: ID-REDACTED completed imported_count=0 jsonl_path=/TMP/.beads/issues.jsonl
Error: Priority must be 0-4, got: 99
Hint: Use a priority between 0 (critical) and 4 (backlog)
