tests/snapshots/snapshots/snapshots__snapshots__error_messages__update_closed_issue.snap
---
source: tests/snapshots/error_messages.rs
assertion_line: 76
expression: "normalize_output(&format!(\"{}{}\", output.stdout, output.stderr))"
---
Updated ID-REDACTED: Will close
  status: closed → in_progress
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::storage::sqlite: Blocked cache refresh deferred; will rebuild lazily on next read operation="update_issue"
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::cli::commands: Blocked cache already marked stale inside the mutation transaction; skipping eager batched refresh command="update"
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync: ID-REDACTED: exporting dirty issues dirty_count=1 needs_flush=false
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Validating sync path path=/TMP/.beads/issues.jsonl beads_dir=/TMP/.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Path validated for sync I/O path=/TMP/.beads/issues.jsonl
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::history: Created backup: /TMP/.beads/.br_history/issues.YYYYMMDD_HHMMSS_NANO.jsonl
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Validating sync path path=/TMP/.beads/issues.jsonl.PID.tmp beads_dir=/TMP/.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Path validated for sync I/O path=/TMP/.beads/issues.jsonl.PID.tmp
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Validating sync path path=/TMP/.beads/issues.jsonl.PID.tmp beads_dir=/TMP/.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Path validated for sync I/O path=/TMP/.beads/issues.jsonl.PID.tmp
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Sync path approved for destructive operation path=/TMP/.beads/issues.jsonl.PID.tmp operation="rename temp file"
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Validating sync path path=/TMP/.beads/issues.jsonl beads_dir=/TMP/.beads
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Path validated for sync I/O path=/TMP/.beads/issues.jsonl
YYYY-MM-DDTHH:MM:SS DEBUG beads_rust::sync::path: Sync path approved for destructive operation path=/TMP/.beads/issues.jsonl operation="overwrite JSONL output"
YYYY-MM-DDTHH:MM:SS  INFO beads_rust::sync: ID-REDACTED complete flushed=true exported=1
